--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: rgba(23, 75, 127, 0.005);
+    background: rgba(205, 213, 224, 0.016);
     justify-content: center;
     align-items: center;
     padding: 10px; 
@@ -824,9 +824,9 @@ animation: auto 15s infinite linear;
     text-align: justify;
     width: 74%;
     height: auto;
-    font-family:Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    color: #000000f4;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-size: 17.75px; 
+    color: #565656ee;
     line-height: 27px;
     padding: 20px;
     border-bottom: 0.15rem solid orangered;
@@ -838,7 +838,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background: rgba(59, 101, 186, 0.118);
+  background: rgba(62, 124, 232, 0.061);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -878,9 +878,10 @@ animation: auto 15s infinite linear;
 .kpt{
   width: 100%;
   height: auto;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-size: 17.75px; 
+    color: #565656ee;
   line-height: 25px;
-  color: #1c3978;
   word-spacing: 1.5px;
   text-align: left;
   font-size: 17.49px; 
@@ -893,7 +894,7 @@ animation: auto 15s infinite linear;
 .kpt:hover{
   transition: 0.25s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
-  background: rgba(27, 84, 141, 0.061);
+  background: rgba(62, 124, 232, 0.061);
   color:rgb(0, 0, 0);
   border-right: 0.25rem solid #8eabc8;
   border-top: 0.25rem solid #8eabc8;
@@ -953,15 +954,15 @@ animation: auto 15s infinite linear;
     text-align: justify;
     width: 101%;
     height: auto;
-    font-family:Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    color: #000000f4;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-size: 17.75px; 
+    color: #565656ee;
     line-height: 27px;
     padding: 15px;
 }
 
 .CRT1:hover{
-  background: rgba(59, 101, 186, 0.118);
+  background: rgba(76, 141, 253, 0.035);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1221,9 +1222,9 @@ height: 220px;
 .TXT{
   width: 100%;
   height: auto;
-  font-family:Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    color: #000000f4;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-size: 17.75px; 
+    color: #565656ee;
     line-height: 27px;
     text-align: justify;
 }
@@ -1238,15 +1239,15 @@ height: 220px;
     text-align: justify;
     width: 72.5%;
     height: auto;
-    font-family:Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    color: #000000f4;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-size: 17.75px; 
+    color: #565656ee;
     line-height: 27px;
     border-top: 0.1rem solid #000;
     padding: 15px;
 }
 .HLTHY:hover{
-  background: rgba(59, 101, 186, 0.118);
+  background: rgba(62, 124, 232, 0.061);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1260,7 +1261,7 @@ height: 220px;
   height: auto;
   font-family:Arial, Helvetica, sans-serif; 
     font-size: 17.5px; 
-    color: #000000f4;
+    color: #565656ee;
     line-height: 27px;
 }
 
@@ -1308,9 +1309,9 @@ transition: 0.26s linear;
   justify-items: center;
   width: 100%;
   height: auto;
-  font-family:Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    color: #000000f4;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-size: 17.75px; 
+    color: #565656ee;
     line-height: 27px;
     border-top: 0.1rem solid #000;
 }
@@ -1342,9 +1343,9 @@ transition: 0.26s linear;
   justify-items: center;
   width: 74%;
   height: auto;
-  font-family:Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    color: #000000f4;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-size: 17.75px; 
+    color: #565656ee;
     line-height: 27px;
     border-top: 0.1rem solid #000;
     margin-top: 2.5rem;
@@ -1352,14 +1353,14 @@ transition: 0.26s linear;
 }
 
 .CC:hover{
-  background: rgba(59, 101, 186, 0.118);
+  background: rgba(62, 124, 232, 0.061);
   border-bottom: 0.15rem solid orangered;
 }
 
 .Texo{
-  font-family:Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    color: #000000f4;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-size: 17.75px; 
+    color: #565656ee;
     line-height: 27px;
     text-align: justify;
 }
@@ -1418,7 +1419,7 @@ transition: 0.26s linear;
 }
 
 .Painting:hover{
-  background: rgba(59, 101, 186, 0.118);
+  background: rgba(62, 124, 232, 0.061);
   border-bottom: 0.15rem solid orangered;
 }
 
