--- a/index.html
+++ b/index.html
@@ -272,11 +272,12 @@
           justify-content: center; 
           justify-items: center; 
           color: rgba(1, 6, 11, 0.968);
-          width: auto; 
+          width: 100%; 
           height: 75px; 
           padding: 2px;
-          font-size: 1.1rem; 
-          font-family: 'arial'; 
+          font-size: 1rem; 
+          font-family: 'arial';
+          word-spacing: -2px; 
           line-height: 20px;
           cursor: pointer;
           border-top: 0.1rem solid rgba(255, 0, 0, 0.288);
@@ -284,7 +285,7 @@
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
           background: -webkit-linear-gradient( orangered 0%,#fffffff9 100%);
-          box-shadow: 1.5px 1.25px 0.19rem 0 rgba(196, 196, 196, 0.948);
+          box-shadow: 1.5px 1.25px 0.19rem 0 rgba(184, 184, 184, 0.948);
          }
 
          .tikinyiki:hover{
@@ -2660,9 +2661,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
 
 
 
