--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgba(62, 125, 232, 0.922);
+                background: rgba(67, 131, 240, 0.942);
                  width: 100%;
                  height: 107px;
                  object-fit: cover;
@@ -268,19 +268,19 @@
 
           .tikinyiki{
           display: grid; 
-          flex-direction: column; 
+          flex-direction: row; 
           justify-content: center; 
           justify-items: center; 
           color: rgba(1, 6, 11, 0.968);
           width: 100%; 
-          height: 75px; 
-          padding: 2px;
+          height: 73px; 
+          padding: 4px;
           font-size: 1rem; 
           font-family: 'arial';
           word-spacing: -2px; 
           line-height: 20px;
           cursor: pointer;
-          border-top: 0.1rem solid rgba(255, 0, 0, 0.288);
+          border-top: 0.4rem solid rgba(210, 35, 99, 0.974);
           border-right: 0.1rem solid rgba(92, 170, 248, 0.097);
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
@@ -524,11 +524,11 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: rgba(205, 213, 224, 0.016);
+    background: rgba(239, 241, 244, 0.016);
     justify-content: center;
     align-items: center;
     padding: 10px; 
-    opacity: 0.99;
+    opacity: 0.98;
 }
 
 ::-webkit-scrollbar{
@@ -827,7 +827,7 @@ animation: auto 15s infinite linear;
     height: auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-size: 17.75px; 
-    color: #565656ee;
+    color:rgba(101, 101, 101, 0.864);
     line-height: 27px;
     padding: 20px;
     border-bottom: 0.15rem solid orangered;
@@ -839,7 +839,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background: rgba(62, 124, 232, 0.061);
+  background: #fcfcfc;
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -881,11 +881,11 @@ animation: auto 15s infinite linear;
   height: auto;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-size: 17.75px; 
-    color: #565656ee;
+    color:rgba(106, 106, 106, 0.864);
   line-height: 25px;
   word-spacing: 1.5px;
   text-align: left;
-  font-size: 17.49px; 
+  font-size: 17.45px; 
   background: #fff;
   border-right: 0.25rem solid transparent;
   border-top: 0.25rem solid transparent;
@@ -894,9 +894,9 @@ animation: auto 15s infinite linear;
 }
 .kpt:hover{
   transition: 0.25s linear;
+  background: #fcfcfc;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
-  background: rgba(62, 124, 232, 0.061);
-  color:rgb(0, 0, 0);
+  color:rgba(101, 101, 101, 0.864);
   border-right: 0.25rem solid #8eabc8;
   border-top: 0.25rem solid #8eabc8;
   border-radius: 0.5rem;
@@ -945,7 +945,7 @@ animation: auto 15s infinite linear;
   width: 73%;
 }
 .Cartes:hover{
-  background: rgba(27, 84, 141, 0.048);
+  background: #fcfcfc;;
 }
 .CRT1{
   display: grid;
@@ -957,13 +957,13 @@ animation: auto 15s infinite linear;
     height: auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-size: 17.75px; 
-    color: #565656ee;
+    color:rgba(101, 101, 101, 0.864);
     line-height: 27px;
     padding: 15px;
 }
 
 .CRT1:hover{
-  background: rgba(76, 141, 253, 0.035);
+  background: transparent;
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1225,7 +1225,7 @@ height: 220px;
   height: auto;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-size: 17.75px; 
-    color: #565656ee;
+    color:rgba(101, 101, 101, 0.864);
     line-height: 27px;
     text-align: justify;
 }
@@ -1242,13 +1242,13 @@ height: 220px;
     height: auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-size: 17.75px; 
-    color: #565656ee;
+    color:rgba(101, 101, 101, 0.864);
     line-height: 27px;
     border-top: 0.1rem solid #000;
     padding: 15px;
 }
 .HLTHY:hover{
-  background: rgba(62, 124, 232, 0.061);
+  background: #fcfcfc;;
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1262,7 +1262,7 @@ height: 220px;
   height: auto;
   font-family:Arial, Helvetica, sans-serif; 
     font-size: 17.5px; 
-    color: #565656ee;
+    color:rgba(101, 101, 101, 0.864);
     line-height: 27px;
 }
 
@@ -1312,7 +1312,7 @@ transition: 0.26s linear;
   height: auto;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-size: 17.75px; 
-    color: #565656ee;
+    color:rgba(101, 101, 101, 0.864);
     line-height: 27px;
     border-top: 0.1rem solid #000;
 }
@@ -1346,7 +1346,7 @@ transition: 0.26s linear;
   height: auto;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-size: 17.75px; 
-    color: #565656ee;
+    color:rgba(101, 101, 101, 0.864);
     line-height: 27px;
     border-top: 0.1rem solid #000;
     margin-top: 2.5rem;
@@ -1354,14 +1354,14 @@ transition: 0.26s linear;
 }
 
 .CC:hover{
-  background: rgba(62, 124, 232, 0.061);
+  background: #fcfcfc;
   border-bottom: 0.15rem solid orangered;
 }
 
 .Texo{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-size: 17.75px; 
-    color: #565656ee;
+    color:rgba(101, 101, 101, 0.864);
     line-height: 27px;
     text-align: justify;
 }
@@ -1950,7 +1950,6 @@ Tiki N'Yiki veut oeuvrer pour changer la tendance de telles mentalités, faire t
     <br>
     Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de sévères marginalisations dans la société et même de l'état qui était censé les aider et protéger.<a href="https://www.ouestaf.com/personnes-vivant-avec-un-handicap-marginalisees-par-letat-au-burkina/" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">[Lire plus...]</a>
     <br>  
-    <br>
     Sinon pourquoi des personnes handicapées dépendantes et vivant isolées sont oubliées quand on doit leur apporter à manger ou à boire, les faire prendre un bain ou leur apporter un besoin quelconque ?
     <br>  
     <br>
@@ -2661,6 +2660,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
