--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgba(67, 131, 240, 0.942);
+                background: rgba(75, 123, 244, 0.956);
                  width: 100%;
                  height: 107px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 2px 0.2rem 0 rgba(62, 124, 232, 0.384);
+                 box-shadow: 0 2px 0.2rem 0 rgba(75, 123, 244, 0.548);
           }
           
           
@@ -284,7 +284,7 @@
           border-right: 0.1rem solid rgba(92, 170, 248, 0.097);
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
-          background: -webkit-linear-gradient( orangered 0%,#fffffff9 100%);
+          background: -webkit-linear-gradient( red 0%,#fffffff9 100%);
           box-shadow: 1.5px 1.25px 0.19rem 0 rgba(184, 184, 184, 0.948);
          }
 
@@ -827,7 +827,7 @@ animation: auto 15s infinite linear;
     height: auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-size: 17.75px; 
-    color:rgba(101, 101, 101, 0.864);
+    color:rgba(35, 35, 35, 0.99);
     line-height: 27px;
     padding: 20px;
     border-bottom: 0.15rem solid orangered;
@@ -2660,6 +2660,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
