--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgba(84, 123, 241, 0.982);
+                background: rgba(90, 128, 242, 0.982);
                  width: 100%;
-                 height: 106px;
+                 height: 97px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 2px 0.2rem 0 rgba(84, 123, 241, 0.335);
+                 box-shadow: 0 2px 0.2rem 0 rgba(90, 128, 242, 0.297);
           }
           
           
@@ -227,9 +227,9 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 140px; 
-            background: #b0b0b058;
-            border-bottom: 0.5rem solid #f1f1f1;
+            height: 137px; 
+            background: #b5b4b458;
+            border-bottom: 0.5rem solid #91919148;
             opacity: 1;
           }
 
@@ -839,7 +839,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background:rgba(84, 123, 241, 0.099);
+  background:rgba(90, 128, 242, 0.089);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -881,7 +881,7 @@ animation: auto 15s infinite linear;
   height: auto;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-size: 17.75px; 
-    color:rgba(106, 106, 106, 0.864);
+    color:rgba(106, 106, 106, 0.915);
   line-height: 25px;
   word-spacing: 1.5px;
   text-align: left;
@@ -890,13 +890,14 @@ animation: auto 15s infinite linear;
   border-right: 0.25rem solid transparent;
   border-top: 0.25rem solid transparent;
   padding: 18px;
+  border-bottom: 0.25rem solid transparent;
   
 }
 .kpt:hover{
   transition: 0.25s linear;
-  background:rgba(84, 123, 241, 0.099);
+  background:rgba(97, 134, 244, 0.051);
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
-  color:rgba(35, 35, 35, 0.99);
+  color:rgba(106, 106, 106, 0.915);
   border-right: 0.25rem solid #8eabc8;
   border-top: 0.25rem solid #8eabc8;
   border-radius: 0.5rem;
@@ -945,7 +946,7 @@ animation: auto 15s infinite linear;
   width: 73%;
 }
 .Cartes:hover{
-  background:rgba(84, 123, 241, 0.099);
+  background:rgba(90, 128, 242, 0.089);
 }
 .CRT1{
   display: grid;
@@ -1248,7 +1249,7 @@ height: 220px;
     padding: 15px;
 }
 .HLTHY:hover{
-  background:rgba(84, 123, 241, 0.099);
+  background:rgba(90, 128, 242, 0.089);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1354,7 +1355,7 @@ transition: 0.26s linear;
 }
 
 .CC:hover{
-  background:rgba(84, 123, 241, 0.099);
+  background:rgba(90, 128, 242, 0.089);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1420,7 +1421,7 @@ transition: 0.26s linear;
 }
 
 .Painting:hover{
-  background:rgba(84, 123, 241, 0.099);
+  background:rgba(90, 128, 242, 0.089);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -2660,6 +2661,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
