--- a/index.html
+++ b/index.html
@@ -2593,16 +2593,16 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                        </a> dans laquelle il a enseigné des enfants handicapés et orphelins, animé de multiples séances de sensibilisation avec thème focal "Handicap et Inclusion Sociale" de 2006 à 2014.
                        <br>
                        <br>
-                       En 2007, 2008, 2013, Gabriel a voyagé en Europe pour la recherche de fonds. Ses séjours l'ont conduit notamment à Genève, à Sion, à Delémont en Suisse en collaboration avec ses ami-es et les dirigeants de <a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> Transport Handicap en Valais</a> et à Rasttat et Kuppenheim dans le Baden-Württemberg en Allemagne pour donner des series de conférences sur l'association PAAS NEERE dont il était président, les différents projets à implémenter, les défis à atteindre et l'impact de l'association pour les communautés locales de la région de Ziniare.
+                       En 2007, 2008, 2013, Gabriel a voyagé en Europe pour la recherche de fonds. Ses séjours l'ont conduit notamment à Genève, à Sion, à Delémont en Suisse en collaboration avec ses ami-es et les dirigeants de <a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> Transport Handicap en Valais</a> et à <a href=" https://fr.wikipedia.org/wiki/Rastatt" target="_blank"> Rasttat</a> et <a href="https://fr.wikipedia.org/wiki/Kuppenheim" target="_blank"> Kuppenheim</a> dans le <a href="https://fr.wikipedia.org/wiki/Bade-Wurtemberg" target="_blank"> Bade-Württemberg </a>en Allemagne pour donner des series de conférences sur l'association PAAS NEERE dont il était président, les différents projets à implémenter, les défis à atteindre et l'impact de l'association pour les communautés locales de la région de Ziniare.
                       <br>
                       <br>
                       En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement d'une communauté différente, marginalisée dans la société dont les personnes handicapées.
                       <br>
                       <br>
-                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. En Juillet 2016 Gabriel a été invité aux Etats-Unis pour 3 mois afin de faire non seulement du networking mais aussi du fundraising et vendre de l'artisanat [Batiks] pour pouvoir financer certains projets de Tiki N'Yiki dont les volets éducation et sécurité alimentaire.
+                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. En Juillet 2016 Gabriel a été invité aux <a href="https://fr.wikipedia.org/wiki/%C3%89tats-Unis" target="_blank"> Etats-Unis </a>pour 3 mois afin de faire non seulement du networking mais aussi du fundraising et vendre de l'artisanat [Batiks] pour pouvoir financer certains projets de Tiki N'Yiki dont les volets éducation et sécurité alimentaire.
                       <br>
                        <br>
-                      En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le projet EDUCATION ont été momentanément interrompues. Elles vont être redéfinies si la sécurité se rétablit. 
+                      En 2017 il était obligé de s'exiler au <a href="https://en.wikipedia.org/wiki/Canada" target="_blank"> Canada </a>pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le projet EDUCATION ont été momentanément interrompues. Elles vont être redéfinies si la sécurité se rétablit. 
                       <br>
                       <br>
                       Résident permanent Canadien, il se reconstruit une nouvelle vie. Entre autres, il écrit ses mémoires, apprend le code informatique tout en souhaitant se former aux sciences des nouvelles technologies. Il se passione en développant ce site internet. 
@@ -2661,6 +2661,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
