--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         height: 2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgba(202, 31, 94, 0.953);
+        background: rgba(192, 26, 86, 0.968);
     }
 
     .DAH{
@@ -227,9 +227,9 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 137px; 
-            background: #b5b4b458;
-            border-bottom: 0.5rem solid #91919148;
+            height: 139.49px; 
+            background: #bcbcbc58;
+            border-bottom: 0.5rem solid rgba(255, 68, 0, 0.9);
             opacity: 1;
           }
 
@@ -2661,9 +2661,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
 
 
