--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 2px 0.2rem 0 rgba(90, 128, 242, 0.297);
+                 box-shadow: 0 2px 0.2rem 0 rgba(82, 118, 249, 0.263);
           }
           
           
@@ -839,7 +839,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background:rgba(90, 128, 242, 0.089);
+  background:rgba(82, 118, 249, 0.09);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -895,7 +895,7 @@ animation: auto 15s infinite linear;
 }
 .kpt:hover{
   transition: 0.25s linear;
-  background:rgba(97, 134, 244, 0.051);
+  background:transparent;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   color:rgba(106, 106, 106, 0.915);
   border-right: 0.25rem solid #8eabc8;
@@ -946,7 +946,7 @@ animation: auto 15s infinite linear;
   width: 73%;
 }
 .Cartes:hover{
-  background:rgba(90, 128, 242, 0.089);
+  background:rgba(82, 118, 249, 0.09);
 }
 .CRT1{
   display: grid;
@@ -1249,7 +1249,7 @@ height: 220px;
     padding: 15px;
 }
 .HLTHY:hover{
-  background:rgba(90, 128, 242, 0.089);
+  background:rgba(82, 118, 249, 0.09);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1355,7 +1355,7 @@ transition: 0.26s linear;
 }
 
 .CC:hover{
-  background:rgba(90, 128, 242, 0.089);
+  background:rgba(82, 118, 249, 0.09);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1421,7 +1421,7 @@ transition: 0.26s linear;
 }
 
 .Painting:hover{
-  background:rgba(90, 128, 242, 0.089);
+  background:rgba(82, 118, 249, 0.09);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -2661,5 +2661,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
