--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgba(85, 113, 252, 0.977);
+                background: rgba(85, 113, 252, 0.963);
                  width: 100%;
                  height: 109px;
                  object-fit: cover;
@@ -205,7 +205,7 @@
             color: rgb(241, 244, 255);
             padding: 9px;
             font-family:'arial';
-            font-size: 19.35px;
+            font-size: 19.45px;
             margin-top: 3px;
             height: 45px;
 }
@@ -227,22 +227,22 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 139.49px; 
+            height: 138.5px; 
             background: #bcbcbc58;
             border-bottom: 0.38rem solid rgba(255, 68, 0, 0.9);
             opacity: 1;
           }
 
-          .BIEN{
+          .BIENVENUE{
             display: grid;
             grid-template-rows: 1fr;
             justify-content: center; 
             justify-items: center;
             color: rgba(20, 54, 149, 0.898);
-            font-family:'arial black'; 
-            font-size: 1rem;
+            font-family:'arial'; 
+            font-size: 1.18rem;
             text-align: left;
-            line-height: 21px;
+            line-height: 23.5px;
             margin-top: 0.7rem;
             width: 78%;
           }
@@ -311,7 +311,7 @@
             color: rgb(241, 244, 255);
             padding: 9px;
             font-family:'arial';
-            font-size: 19.35px;
+            font-size: 19.45px;
           }
 
           .myDiv:hover{
@@ -337,7 +337,7 @@
             color: rgb(241, 244, 255);
             padding: 9px;
             font-family:'arial';
-            font-size: 19.35px;
+            font-size: 19.45px;
           }
 
           .myDiv1:hover{
@@ -363,7 +363,7 @@
             color: rgb(241, 244, 255);
             padding: 9px;
             font-family:'arial';
-            font-size: 19.35px;
+            font-size: 19.45px;
             }
 
           .myDiv2:hover{
@@ -389,7 +389,7 @@
             color: rgb(241, 244, 255);
             padding: 9px;
             font-family:'arial';
-            font-size: 19.35px;
+            font-size: 19.45px;
           }
           .myDivT:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
@@ -414,7 +414,7 @@
             color: rgb(241, 244, 255);
             padding: 9px;
             font-family:'arial';
-            font-size: 19.35px;
+            font-size: 19.45px;
           }
 
           .Peinture:hover{
@@ -441,7 +441,7 @@
             color: rgb(241, 244, 255);
             padding: 9px;
             font-family:'arial';
-            font-size: 19.35px;
+            font-size: 19.45px;
             }
 
           .myDiv6:hover{
@@ -1631,7 +1631,7 @@ function myFunction() {
   </div>
   </a>
 
-  <div class="BIEN"> 
+  <div class="BIENVENUE"> 
   Bienvenue sur ce site internet en développement ! Cette page internet est sommairement descriptive du contenu et du plan du site une fois terminé.
   Pour ce faire certaines photos, images et/ou favicons et certains liens hypertextes sont temporaires.
 <br>
@@ -2658,6 +2658,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
