--- a/index.html
+++ b/index.html
@@ -1645,7 +1645,7 @@ function myFunction() {
 
 <img src="https://www.zupimages.net/up/23/31/1gi8.jpg" alt="escargot">
 <figure>
-  <figcaption style="font-family: Georgia, 'Times New Roman', Times, serif; color:rgba(255, 68, 0, 0.987); font-size: 13px; padding: 5px;"><b>L'escargot semble porter un gros fardeau sur son dos avec sa coquille. Mais malgré cette charge vitale qu'il trimballe éternellement, il s'accroche pour arriver à bon port.</b></figcaption>
+  <figcaption style="font-family:Verdana, Geneva, Tahoma, sans-serif; color:#929292e4; font-size: 12.5px; padding: 9px;"><b>L'escargot semble porter un gros fardeau sur son dos avec sa coquille. Mais malgré cette charge vitale qu'il trimballe éternellement, il s'accroche pour arriver à bon port.</b></figcaption>
   </figure>
 </div>
 
@@ -2657,9 +2657,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
 
 
