--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgba(85, 113, 252, 0.963);
+                background: rgba(88, 116, 255, 0.953);
                  width: 100%;
                  height: 84px;
                  object-fit: cover;
@@ -228,8 +228,8 @@
             column-gap: 1rem;
             width: 100%; 
             height: 139px; 
-            background: #d3d3d376;
-            border-bottom: 0.38rem solid rgba(255, 68, 0, 0.9);
+            background: #d1d1d176;
+            border-bottom: 0.36rem solid orangered;
            
           }
 
@@ -238,7 +238,7 @@
             grid-template-rows: 1fr;
             justify-content: center; 
             justify-items: center;
-            color: rgba(20, 54, 149, 0.898);
+            color: rgba(23, 51, 128, 0.946);
             font-family:'arial'; 
             font-size: 1.15rem;
             text-align: left;
@@ -2657,6 +2657,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
