--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         height: 2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgba(192, 26, 86, 0.968);
+        background: rgba(195, 26, 88, 0.987);
     }
 
     .DAH{
@@ -227,10 +227,8 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 139px; 
+            height: 135px; 
             background: #d1d1d176;
-            border-bottom: 0.36rem solid orangered;
-           
           }
 
           .BIENVENUE{
@@ -259,7 +257,6 @@
             width: 100%;
             height: 10%;
             cursor: pointer;
-            opacity: 0.96;
           }
 
           .VIDEO img:hover{
@@ -1643,9 +1640,9 @@ function myFunction() {
 
 <div class="VIDEO">
 
-<img src="https://www.zupimages.net/up/23/31/1gi8.jpg" alt="escargot">
+<img src="https://www.zupimages.net/up/23/31/zxgr.jpg" alt="Soleil couchant au Burkina Faso">
 <figure>
-  <figcaption style="font-family:Verdana, Geneva, Tahoma, sans-serif; color:#929292e4; font-size: 12.5px; padding: 9px;"><b>L'escargot semble porter un gros fardeau sur son dos avec sa coquille. Mais malgré cette charge vitale qu'il trimballe éternellement, il s'accroche pour arriver à bon port.</b></figcaption>
+  <figcaption style="font-family:Verdana, Geneva, Tahoma, sans-serif; color: orangered; font-size: 14px; padding: 12px; margin-left: 1rem;"><b>Soleil couchant au Burkina Faso</b></figcaption>
   </figure>
 </div>
 
@@ -2657,8 +2654,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
 
