--- a/index.html
+++ b/index.html
@@ -1636,7 +1636,7 @@ function myFunction() {
 
 </div>
 
-<a href="https://codexvirtualis.fr/codex/cabinet-de-curiosites-virtuel/images-insolites-instructives/les-acrobaties-de-lescargot" target="_blank">
+<a href="https://fr.wikipedia.org/wiki/Coucher_de_soleil" target="_blank">
 
 <div class="VIDEO">
 
