--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgba(88, 116, 255, 0.953);
+                background: rgba(21, 65, 168, 0.953);
                  width: 100%;
                  height: 84px;
                  object-fit: cover;
@@ -281,7 +281,7 @@
           border-right: 0.1rem solid rgba(92, 170, 248, 0.097);
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
-          background: -webkit-linear-gradient( red 0%,#fffffff9 100%);
+          background: -webkit-linear-gradient( orangered 0%,#fff 100%);
           box-shadow: 1.5px 1.25px 0.19rem 0 rgba(184, 184, 184, 0.948);
          }
 
@@ -521,7 +521,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: rgba(239, 241, 244, 0.016);
+    background: transparent;
     justify-content: center;
     align-items: center;
     padding: 10px; 
@@ -1642,7 +1642,7 @@ function myFunction() {
 
 <img src="https://www.zupimages.net/up/23/31/zxgr.jpg" alt="Soleil couchant au Burkina Faso">
 <figure>
-  <figcaption style="font-family:Verdana, Geneva, Tahoma, sans-serif; color: orangered; font-size: 14px; padding: 12px; margin-left: 1rem;"><b>Soleil couchant au Burkina Faso</b></figcaption>
+  <figcaption style="font-family:Verdana, Geneva, Tahoma, sans-serif; color: orangered; font-size: 14px; padding: 12px; margin-left: 1rem;"><b>Soleil couchant de Nagreongo au Burkina Faso [ Copyright © 2013-GCK ]</b></figcaption>
   </figure>
 </div>
 
@@ -2654,4 +2654,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
