--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgba(24, 67, 169, 0.953);
+                background: rgba(24, 69, 173, 0.953);
                  width: 100%;
                  height: 84px;
                  object-fit: cover;
@@ -277,12 +277,12 @@
           word-spacing: -2px; 
           line-height: 20px;
           cursor: pointer;
-          border-top: 0.4rem solid rgba(11, 0, 4, 0.974);
+          border-top: 0.45rem solid yellow;
           border-right: 0.1rem solid rgba(92, 170, 248, 0.097);
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
           background: -webkit-linear-gradient( orangered 0%,#fff 100%);
-          box-shadow: 1.5px 1.25px 0.19rem 0 rgba(184, 184, 184, 0.948);
+          box-shadow: 1.5px 1.25px 0.15rem 0 rgba(184, 184, 184, 0.948);
          }
 
          .tikinyiki:hover{
@@ -290,7 +290,7 @@
           transition: 0.12s ease-in;
           color: #252525f4;
           border-right: none;
-          border-top: 0.5rem solid #000;
+          border-top: 0.6rem solid #000;
           box-shadow: 0.1px 0.1px 0.55rem 0 #adadadae;
          }
 
