--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@
           word-spacing: -2px; 
           line-height: 20px;
           cursor: pointer;
-          border-top: 0.45rem solid rgb(1, 255, 14);
+          border-top: 0.49rem solid yellow;
           border-right: 0.1rem solid rgba(92, 170, 248, 0.097);
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
           background: -webkit-linear-gradient( orangered 0%,#fff 100%);
-          box-shadow: 1.5px 1.25px 0.15rem 0 rgba(206, 221, 255, 0.953);
+          box-shadow: 1.5px 1.25px 0.15rem 0 rgba(159, 186, 255, 0.998);
          }
 
          .tikinyiki:hover{
@@ -2654,6 +2654,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
