--- a/index.html
+++ b/index.html
@@ -891,9 +891,9 @@ animation: auto 15s infinite linear;
 }
 .kpt:hover{
   transition: 0.25s linear;
-  background:transparent;
+  background: rgba(226, 226, 251, 0.275);
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
-  color:rgba(106, 106, 106, 0.915);
+  color:rgba(104, 104, 104, 0.915);
   border-right: 0.25rem solid #8eabc8;
   border-top: 0.25rem solid #8eabc8;
   border-radius: 0.5rem;
@@ -1071,7 +1071,6 @@ height: 750px;
     justify-content: center;
     justify-items: center;
     background: transparent;
-    border: 0.12rem solid #aaaaaacb;
     color: rgb(255, 3, 137);; 
     padding: 10px; 
     font-size: 22px;
@@ -2654,6 +2653,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
