--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgba(33, 81, 191, 0.953);
+                background: rgba(44, 101, 233, 0.948);
                  width: 100%;
                  height: 84px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 2px 0.5rem 0 rgba(85, 113, 252, 0.25);
+                 box-shadow: 0 2px 0.5rem 0 rgba(38, 89, 229, 0.255);
           }
           
           
@@ -202,7 +202,7 @@
             cursor: pointer;
             width: 100%;
             background: transparent;
-            color: rgb(241, 244, 255);
+            color: rgba(235, 240, 255, 0.992);
             padding: 9px;
             font-family:'arial';
             font-size: 19.45px;
@@ -282,7 +282,7 @@
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
           background: -webkit-linear-gradient( orangered 0%,#fff 100%);
-          box-shadow: 1.5px 1.25px 0.15rem 0 rgba(220, 229, 250, 0.814);
+          box-shadow: 1.5px 1.25px 0.2rem 0 rgba(185, 203, 253, 0.973);
          }
 
          .tikinyiki:hover{
@@ -305,7 +305,7 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: rgb(241, 244, 255);
+            color: rgba(235, 240, 255, 0.992);
             padding: 9px;
             font-family:'arial';
             font-size: 19.45px;
@@ -331,7 +331,7 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: rgb(241, 244, 255);
+            color: rgba(235, 240, 255, 0.992);
             padding: 9px;
             font-family:'arial';
             font-size: 19.45px;
@@ -357,7 +357,7 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: rgb(241, 244, 255);
+            color: rgba(235, 240, 255, 0.992);
             padding: 9px;
             font-family:'arial';
             font-size: 19.45px;
@@ -383,7 +383,7 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: rgb(241, 244, 255);
+            color: rgba(235, 240, 255, 0.992);
             padding: 9px;
             font-family:'arial';
             font-size: 19.45px;
@@ -408,7 +408,7 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: rgb(241, 244, 255);
+            color: rgba(235, 240, 255, 0.992);
             padding: 9px;
             font-family:'arial';
             font-size: 19.45px;
@@ -435,7 +435,7 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: rgb(241, 244, 255);
+            color: rgba(235, 240, 255, 0.992);
             padding: 9px;
             font-family:'arial';
             font-size: 19.45px;
@@ -835,7 +835,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background:rgba(28, 75, 184, 0.111);
+  background:rgba(44, 101, 233, 0.235);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -942,7 +942,7 @@ animation: auto 15s infinite linear;
   width: 73%;
 }
 .Cartes:hover{
-  background:rgba(28, 75, 184, 0.111);
+  background:rgba(44, 101, 233, 0.235);
 }
 .CRT1{
   display: grid;
@@ -1243,7 +1243,7 @@ height: 220px;
     padding: 15px;
 }
 .HLTHY:hover{
-  background:rgba(28, 75, 184, 0.111);
+  background:rgba(44, 101, 233, 0.235);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1355,7 +1355,7 @@ transition: 0.26s linear;
 }
 
 .CC:hover{
-  background:rgba(28, 75, 184, 0.111);
+  background:rgba(44, 101, 233, 0.235);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1413,7 +1413,7 @@ transition: 0.26s linear;
 }
 
 .Painting:hover{
-  background:rgba(27, 74, 185, 0.127);
+  background:rgba(31, 97, 218, 0.18);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -2653,5 +2653,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
