--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgba(44, 101, 233, 0.948);
+                background: rgba(44, 101, 233, 0.968);
                  width: 100%;
                  height: 84px;
                  object-fit: cover;
@@ -213,11 +213,11 @@
 .TYK1:hover{
   background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgb(128, 255, 25);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
-            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
+            box-shadow: 2px -2.4px 0.45rem 0 rgba(1, 3, 24, 0.992);
 }
 
 .navbar0{
@@ -314,11 +314,11 @@
           .myDiv:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgb(128, 255, 25);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
-            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
+            box-shadow: 2px -2.4px 0.45rem 0 rgba(1, 3, 24, 0.992);
           }
 
           .myDiv1{
@@ -340,11 +340,11 @@
           .myDiv1:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgb(128, 255, 25);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
-            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
+            box-shadow: 2px -2.4px 0.45rem 0 rgba(1, 3, 24, 0.992);
           }
 
           .myDiv2{
@@ -366,11 +366,11 @@
           .myDiv2:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgb(128, 255, 25);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
-            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
+            box-shadow: 2px -2.4px 0.45rem 0 rgba(1, 3, 24, 0.992);
           }
 
           .myDivT{
@@ -391,11 +391,11 @@
           .myDivT:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgb(128, 255, 25);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
-            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
+            box-shadow: 2px -2.4px 0.45rem 0 rgba(1, 3, 24, 0.992);
           }
 
           .Peinture{
@@ -417,11 +417,11 @@
           .Peinture:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgb(128, 255, 25);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
-            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
+            box-shadow: 2px -2.4px 0.45rem 0 rgba(1, 3, 24, 0.992);
           }
 
 
@@ -444,11 +444,11 @@
           .myDiv6:hover{
             background: -webkit-linear-gradient(rgb(255, 2, 2) 0%,rgb(255, 4, 0)) 100%;
             border-bottom: 0.5rem solid rgb(1, 255, 14);
-            color: rgb(128, 255, 25);
+            color: yellow;
             transition: 0.18s ease;
             border-top-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
-            box-shadow: 2px -2.4px 0.4rem 0 rgba(1, 3, 21, 0.992);
+            box-shadow: 2px -2.4px 0.45rem 0 rgba(1, 3, 24, 0.992);
           }
 
           
@@ -2653,7 +2653,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
 
 
