--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: rgba(44, 101, 233, 0.968);
+                background: #000;
                  width: 100%;
                  height: 84px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 2px 0.5rem 0 rgba(38, 89, 229, 0.255);
+                 box-shadow: 0 2px 0.5rem 0 rgba(0, 5, 18, 0.34);
           }
           
           
@@ -277,7 +277,7 @@
           word-spacing: -2px; 
           line-height: 20px;
           cursor: pointer;
-          border-top: 0.49rem solid yellow;
+          border-top: 0.49rem solid cyan;
           border-right: 0.1rem solid rgba(92, 170, 248, 0.097);
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
@@ -286,12 +286,13 @@
          }
 
          .tikinyiki:hover{
-          background: -webkit-linear-gradient(#fffffffd 0%, #fff 100%);
+          background: #000;
           transition: 0.12s ease-in;
           color: #252525f4;
           border-right: none;
-          border-top: 0.6rem solid #000;
-          box-shadow: 0.1px 0.1px 0.55rem 0 #adadadae;
+          border-top: 0.6rem solid rgb(27, 27, 255);
+          color:rgb(27, 27, 255);
+          box-shadow: 0.1px 0.1px 0.55rem 0 #c6c6c6ae;
          }
 
 
@@ -2653,5 +2654,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
