--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         height: 2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgba(189, 30, 88, 0.966);
+        background: rgba(189, 18, 67, 0.935);
     }
 
     .DAH{
@@ -105,7 +105,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: cyan;
+      color: yellow;
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -126,7 +126,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: cyan;
+      color: yellow;
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -146,7 +146,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: cyan;
+      color: yellow;
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -166,7 +166,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: cyan;
+      color: yellow;
       padding: 10px;
       font-family: Verdana; 
       font-size: 13px;
@@ -190,7 +190,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 2px 0.5rem 0 rgba(0, 5, 18, 0.34);
+                 box-shadow: 0 2px 0.5rem 0 rgba(0, 5, 18, 0.57);
           }
           
           
@@ -278,11 +278,12 @@
           line-height: 20px;
           cursor: pointer;
           border-top: 0.49rem solid cyan;
-          border-right: 0.1rem solid rgba(92, 170, 248, 0.097);
+          border-right: 0.15rem solid rgba(92, 170, 248, 0.097);
+          border-left: 0.15rem solid rgba(92, 170, 248, 0.097);
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
           background: -webkit-linear-gradient( orangered 0%,#fff 100%);
-          box-shadow: 1.5px 1.25px 0.2rem 0 rgba(185, 203, 253, 0.973);
+          box-shadow: 1.5px 1.25px 0.6rem 0 rgba(198, 220, 241, 0.793);
          }
 
          .tikinyiki:hover{
@@ -836,7 +837,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background:rgba(47, 98, 250, 0.137);
+  background:rgba(0, 255, 255, 0.027);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -892,7 +893,7 @@ animation: auto 15s infinite linear;
 }
 .kpt:hover{
   transition: 0.25s linear;
-  background: rgba(226, 226, 251, 0.275);
+  background:rgba(0, 255, 255, 0.027);
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   color:rgba(104, 104, 104, 0.915);
   border-right: 0.25rem solid #8eabc8;
@@ -943,7 +944,7 @@ animation: auto 15s infinite linear;
   width: 73%;
 }
 .Cartes:hover{
-  background:rgba(47, 98, 250, 0.137);
+  background:rgba(0, 255, 255, 0.027);
 }
 .CRT1{
   display: grid;
@@ -1244,7 +1245,7 @@ height: 220px;
     padding: 15px;
 }
 .HLTHY:hover{
-  background:rgba(47, 98, 250, 0.137);
+  background:rgba(0, 255, 255, 0.027);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1356,7 +1357,7 @@ transition: 0.26s linear;
 }
 
 .CC:hover{
-  background:rgba(47, 98, 250, 0.137);
+  background:rgba(0, 255, 255, 0.027);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1414,7 +1415,7 @@ transition: 0.26s linear;
 }
 
 .Painting:hover{
-  background:rgba(47, 98, 250, 0.15);
+  background:rgba(0, 255, 255, 0.027);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -2586,13 +2587,14 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                        </a> dans laquelle il a enseigné des enfants handicapés et orphelins, animé de multiples séances de sensibilisation avec thème focal "Handicap et Inclusion Sociale" de 2006 à 2014.
                        <br>
                        <br>
-                       En 2007, 2008, 2013, Gabriel a voyagé en Europe pour la recherche de fonds. Ses séjours l'ont conduit notamment à Genève, à Sion, à Delémont en Suisse en collaboration avec ses ami-es et les dirigeants de <a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> Transport Handicap en Valais</a> et à <a href=" https://fr.wikipedia.org/wiki/Rastatt" target="_blank"> Rasttat</a> et <a href="https://fr.wikipedia.org/wiki/Kuppenheim" target="_blank"> Kuppenheim</a> dans le <a href="https://fr.wikipedia.org/wiki/Bade-Wurtemberg" target="_blank"> Bade-Württemberg </a>en Allemagne pour donner des series de conférences sur l'association PAAS NEERE dont il était président, les différents projets à implémenter, les défis à atteindre et l'impact de l'association pour les communautés locales de la région de Ziniare.
+                       En 2007, 2008, 2013, Gabriel a voyagé en Europe pour la recherche de fonds. Ses séjours l'ont conduit notamment à Genève, à Sion, à Delémont en Suisse en collaboration avec ses ami-es et les dirigeants de <a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> Transport Handicap en Valais</a> et à <a href=" https://fr.wikipedia.org/wiki/Rastatt" target="_blank"> Rasttat</a> et <a href="https://fr.wikipedia.org/wiki/Kuppenheim" target="_blank"> Kuppenheim</a> dans le <a href="https://fr.wikipedia.org/wiki/Bade-Wurtemberg" target="_blank"> Bade-Wurtemberg [Baden-Württemberg] </a>en Allemagne pour donner des series de conférences sur l'association PAAS NEERE dont il était président, les différents projets à implémenter, les défis à atteindre et l'impact de l'association pour les communautés locales de la région de Ziniare.
                       <br>
                       <br>
                       En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement d'une communauté différente, marginalisée dans la société dont les personnes handicapées.
                       <br>
                       <br>
-                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. En Juillet 2016 Gabriel a été invité aux <a href="https://fr.wikipedia.org/wiki/%C3%89tats-Unis" target="_blank"> Etats-Unis </a>pour 3 mois afin de faire non seulement du networking mais aussi du fundraising et vendre de l'artisanat [Batiks] pour pouvoir financer certains projets de Tiki N'Yiki dont les volets éducation et sécurité alimentaire.
+                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. En Juillet 2016 Gabriel a été invité aux <a href="https://fr.wikipedia.org/wiki/%C3%89tats-Unis" target="_blank"> Etats-Unis </a>pour 3 mois afin de faire non seulement du networking mais aussi du fundraising et vendre de l'artisanat [Batiks] pour pouvoir financer certains projets de Tiki N'Yiki dont les volets éducation et sécurité alimentaire. De la côte Est [New-York_city-NY, Boston-MA, Appleton-ME, Burlington & St Joahnnesbury VT] à la côte Ouest [Portland-Oregon, Olympia-WA] Gabriel avec le soutien efficace et l'esprit élévé d'organisation, de solidarité et d'entraide des ami-es, a pu non seulement, présenté la vision de Tiki N'Yiki pendant des festivals ou des foires mais aussi analyser et étudier les perpectives permettant d'élargir le réseau de collaborateurs en termes de mieux réaliser le projet et développer de nouveaux partenariats gage pour un meilleur fonctionnement continu de l'ensemble de la Fondation Tiki N'Yiki. Particlièrement mettre sur pied une commission VOLONTARIAT pour de permettre à des volontaires d'échanger leurs services dans d'autres ne serait-ce que de courte durée et ce de part du Sud au Nord  et vice-versa 
+                      Privilège accordé aux volontaires de la santé [docteurs] et de l'éducation comme des profs bénévoles d'informatique.
                       <br>
                        <br>
                       En 2017 il était obligé de s'exiler au <a href="https://en.wikipedia.org/wiki/Canada" target="_blank"> Canada </a>pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le projet EDUCATION ont été momentanément interrompues. Elles vont être redéfinies si la sécurité se rétablit. 
