--- a/index.html
+++ b/index.html
@@ -525,6 +525,7 @@ hr{
     justify-content: center;
     align-items: center;
     padding: 10px; 
+    opacity: 0.98;
 }
 
 ::-webkit-scrollbar{
@@ -1965,7 +1966,7 @@ Tiki N'Yiki veut oeuvrer pour changer la tendance de telles mentalités, faire t
   <div class="k1">
     <hr style="color: rgb(13, 31, 136); justify-self: left;"> 
     <br>  
-    <span style="background: transparent; font-family: 'courier new'; font-size: 30px; color: rgb(32, 87, 175); text-align: left; line-height: 29px">
+    <span style="background: transparent; font-family: 'courier new'; font-size: 30px; color: rgb(32, 87, 175); text-align: left; line-height: 34px">
       <strong>Manque d'infrastructures, Négligeance et Indifférence. 
     </strong>
     </span>
@@ -2028,7 +2029,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
          pour ces enfants handicapés qui risquent de faire face à une suppression de leurs propres droits par leurs propres parents.  
         <br>
         <hr style="color: rgba(239, 54, 7, 0.977); justify-self: center;"> 
-        <b style="color:rgba(239, 54, 7, 0.977); font-size: 23px; font-family: georgia;">Académie Tiki N'Yiki</b> 
+        <b style="font-size: 23px; font-family: 'courier new'; font-size: 30px; color: rgb(32, 87, 175);">Académie Tiki N'Yiki</b> 
         <br>  
         Il est inimaginable de voir que de personnes handicapées ne soient pas à mesure de partir à l'hôpital quand elles tombent malades, aller étudier, partir au marché, aller au culte ou simplement sortir marcher à cause du manque de moyens de déplacement (transport). 
         <br>  
@@ -2051,13 +2052,13 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
   <div class="KA" style="color: #01458efe; display: flex; justify-content: center; align-items: center; border-left: 0.45rem solid lightgrey;">
     
-    <p style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 17px; text-align: justify; padding: 10px; line-height: 23px;">
-    <b>Au vu de ces différentes difficultés faites de barrières sociales, 
+    <p style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: rgba(27, 77, 139, 0.984); font-size: 17px; text-align: justify; padding: 20px; line-height: 24.5px;">
+    Au vu de ces différentes difficultés faites de barrières sociales, 
       d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un établissement d'étude, mixte et adapté nommé Accadémie Tiki N'Yiki. Cette académie d'étude dont le but sera d'accueillir des élèves et étudiant-es en situation de handicap voudrait impacter positivement la communauté. 
       Une accréditation sera attribuée à l'académie pour délivrer des diplômes inter-grades.
       La section infrastructurelle prendra en compte la construction de salles d'étude, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer son bon fonctionnement. 
       Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
-       pour la mobilité en cas de nécessité.</b>
+       pour leur mobilité.
     </p>
    <br>
         </div>
@@ -2074,7 +2075,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <br>
         <b style="color:#ff0a06">Pour ce faire l'inclusion doit être encouragée et soutenue. </b>
         <br>
-        <b style="font-size: 21px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: rgba(3, 123, 252, 0.972); text-align: justify; line-height: 25px;">
+        <b style="font-size: 21px; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color: rgba(20, 133, 253, 0.989); text-align: justify; line-height: 25px;">
           Avoir le droit à l'éducation, aux soins de santé, être à l'abri de l'insécurité alimentaire font partie des objectifs cruciaux que Tiki N'Yiki s'est fixés afin d'aider les enfants handicapés au Burkina Faso.</b>
     </p>
 </div>
@@ -2654,6 +2655,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
