--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         height: 2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgba(189, 18, 67, 0.935);
+        background: rgba(179, 23, 60, 0.964);
     }
 
     .DAH{
@@ -105,7 +105,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: yellow;
+      color: rgb(255, 193, 37);
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -126,7 +126,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: yellow;
+      color: rgb(255, 193, 37);
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -146,7 +146,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: yellow;
+      color: rgb(255, 193, 37);
       padding: 10px;
       font-family: verdana; 
       font-size: 14px;
@@ -166,7 +166,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: yellow;
+      color: rgb(255, 193, 37);
       padding: 10px;
       font-family: Verdana; 
       font-size: 13px;
@@ -825,7 +825,7 @@ animation: auto 15s infinite linear;
     font-family: Arial, Helvetica, sans-serif; 
     font-size: 17.5px; 
     line-height: 27.65px;
-    color:rgba(35, 35, 35, 0.99);
+    color:rgba(55, 55, 55, 0.956);
     padding: 20px;
     border-bottom: 0.15rem solid orangered;
 }
@@ -876,13 +876,12 @@ animation: auto 15s infinite linear;
 .kpt{
   width: 100%;
   height: auto;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-    font-size: 17.75px; 
-    color:rgba(104, 104, 104, 0.857);
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+  font-size: 17px;
+  color:rgba(115, 114, 114, 0.857);
   line-height: 25px;
   word-spacing: 1.5px;
   text-align: left;
-  font-size: 17.45px; 
   background: #fff;
   border-right: 0.25rem solid transparent;
   border-top: 0.25rem solid transparent;
@@ -956,7 +955,7 @@ animation: auto 15s infinite linear;
     font-family: Arial, Helvetica, sans-serif; 
     font-size: 17.5px; 
     line-height: 27.65px;
-    color:rgba(35, 35, 35, 0.99);
+    color:rgba(55, 55, 55, 0.956);
     padding: 15px;
 }
 
@@ -1223,7 +1222,7 @@ height: 220px;
   font-family: Arial, Helvetica, sans-serif; 
     font-size: 17.5px; 
     line-height: 27.65px;
-    color:rgba(35, 35, 35, 0.99);
+    color:rgba(55, 55, 55, 0.956);
     text-align: justify;
 }
 
@@ -1240,7 +1239,7 @@ height: 220px;
     font-family: Arial, Helvetica, sans-serif; 
     font-size: 17.5px; 
     line-height: 27.65px;
-    color:rgba(35, 35, 35, 0.99);
+    color:rgba(55, 55, 55, 0.956);
     padding: 15px;
 }
 .HLTHY:hover{
@@ -1259,7 +1258,7 @@ height: 220px;
   font-family: Arial, Helvetica, sans-serif; 
     font-size: 17.5px; 
     line-height: 27.65px;
-    color:rgba(35, 35, 35, 0.99);
+    color:rgba(55, 55, 55, 0.956);
 }
 
 .CHRZiniare {
@@ -1309,7 +1308,7 @@ transition: 0.26s linear;
   font-family: Arial, Helvetica, sans-serif; 
     font-size: 17.5px; 
     line-height: 27.65px;
-    color:rgba(35, 35, 35, 0.99);
+    color:rgba(55, 55, 55, 0.956);
     border-top: 0.1rem solid #000;
 }
 
@@ -1336,7 +1335,7 @@ transition: 0.26s linear;
   font-family: Arial, Helvetica, sans-serif; 
     font-size: 17.5px; 
     line-height: 27.65px;
-    color:rgba(35, 35, 35, 0.99);
+    color:rgba(55, 55, 55, 0.956);
     text-align: justify;
 }
 
@@ -1351,7 +1350,7 @@ transition: 0.26s linear;
   font-family: Arial, Helvetica, sans-serif; 
     font-size: 17.5px; 
     line-height: 27.65px;
-    color:rgba(35, 35, 35, 0.99);
+    color:rgba(55, 55, 55, 0.956);
     padding: 15px;
 }
 
@@ -1811,7 +1810,7 @@ function myFunction() {
       
           <div class="Cartes">
             
-<span style="background: transparent; font-family: 'courier new'; font-size: 30px; color: rgb(32, 87, 175); text-align: left; line-height: 29px justify;"><strong>
+<span style="background: transparent; font-family: 'courier new'; font-size: 30px; color: rgb(32, 87, 175); text-align: left; line-height: 30px justify;"><strong>
               Burkina Faso | Contexte du handicap et de l'inclusion sociale  </strong> 
             </span>
             <br> 
@@ -2592,8 +2591,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement d'une communauté différente, marginalisée dans la société dont les personnes handicapées.
                       <br>
                       <br>
-                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. En Juillet 2016 Gabriel a été invité aux <a href="https://fr.wikipedia.org/wiki/%C3%89tats-Unis" target="_blank"> Etats-Unis </a>pour 3 mois afin de faire non seulement du networking mais aussi du fundraising et vendre de l'artisanat [Batiks] pour soutenir les projets de Tiki N'Yiki dont l'éducation et surtout la sécurité alimentaire. De la côte Est [New-York_city-NY, Boston-MA, Appleton-ME, Burlington & St Joahnnesbury VT] à la côte Ouest [Portland-OR, Olympia-WA] Gabriel avec l'aide efficace et l'esprit élévé d'organisation, de solidarité et d'entraide de ses ami-es, a non seulement
-                       pu présenté la vision de Tiki N'Yiki pendant certains festivals et foires mais aussi a analysé et étudié les perpectives permettant de bâtir et élargir un sûr réseau de collaborateurs pour mieux atteindre les objectifs des projets et développer de nouveaux partenariats, gage d'un un meilleur fonctionnement continu de l'ensemble de la Fondation Tiki N'Yiki. Particlièrement mettre sur pied une commission VOLONTARIAT qui se chargera de coordonner les projets de voyage et d'échange des quelconques volontaires quelque soit la durée du séjour: courte, moyenne et/ou longue durée entre le Sud et le Nord et vice-versa.
+                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. En Juillet 2016 Gabriel a été invité aux <a href="https://fr.wikipedia.org/wiki/%C3%89tats-Unis" target="_blank"> Etats-Unis </a>pour 3 mois afin de faire non seulement du networking mais aussi du fundraising et vendre de l'artisanat [Batiks] pour soutenir les projets de Tiki N'Yiki dont l'éducation et surtout la sécurité alimentaire. De la côte Est des Etats-Unis [New-York-City-NY, Boston-MA, Appleton-ME, Burlington & St Joahnnesbury VT] jusqu'à la côte Ouest [Portland-OR, Olympia-WA] Gabriel avec l'aide efficace de ses ami-es et leur esprit élévé d'organisation, de solidarité et d'entraide, a non seulement
+                       pu présenter la vision de Tiki N'Yiki pendant des festivals et des foires mais aussi a analysé et étudié des perpectives permettant de bâtir et élargir un sûr réseau de collaborateurs pour mieux atteindre les objectifs des projets et développer de nouveaux partenariats, gage d'un un meilleur fonctionnement continu de l'ensemble de la Fondation Tiki N'Yiki. Particlièrement mettre sur pied une commission VOLONTARIAT qui se chargera de coordonner les projets de voyage et d'échange des quelconques volontaires quelque soit la durée du séjour: courte, moyenne et/ou longue durée entre le Sud et le Nord et vice-versa.
                        <br>
                        <br>
                       En 2017, malheureusement Gabriel était obligé de s'exiler au <a href="https://en.wikipedia.org/wiki/Canada" target="_blank"> Canada </a>pour des raisons sécuritaires. En effet certaines activités de Tiki N'Yiki y compris le projet EDUCATION ont été momentanément interrompues. Elles vont être redéfinies si la sécurité se rétablit. 
@@ -2655,8 +2654,3 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
